Returned back to Java 8 compatibility. Use reflection and dynamic proxies to call Apple-specific APIs for dock icon and quit handler.